--- a/Breakout/css/styles.css
+++ b/Breakout/css/styles.css
@@ -1,154 +1,24 @@
-.container {
-    display: flex;
-    flex-wrap: nowrap;
-}
 
-.column {
-    padding-bottom: 36em;
-    box-sizing: border-box;
-    border: 0.15em solid #ddd;
-    background-color: #f9f9f9;
-}
-
-.center-column {
-    flex: 0 0 60%;
-}
-
-.side-column {
-    flex: 0 0 20%;
-}
-
-.title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 6em;
-    background: bisque;
-}
-
-h2 {
-    padding: 0.5em 1em;
-    background: gray;
-    color: #4f0b0f;
+.platform {
+    background-color: darkseagreen;
     border-radius: 1em;
 }
 
 .block-container {
-    display: flex;
-    justify-items: center;
-    justify-content: center;
     width: 100%;
-    height: 13%;
-}
-
-.block {
-    display: flex;
-    height: 50%;
-    width: 9.4%;
-    margin: 0.3em;
-    border-radius: 0.2em;
-    transition: background-color 0.3s ease;
-}
-
-
-.block.hp-3 {
-    background-color: black;
-}
-
-.block.hp-2 {
-    background-color: blue;
-}
-
-.block.hp-1 {
-    background-color: cornflowerblue;
-}
-
-
-.platform-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 0.7em;
-    margin-top: 37.8em;
-}
-
-
-.platform {
     height: 100%;
-    width: 10%;
-    background-color: darkseagreen;
-    position: relative;
-    left: 0;
-    border-radius: 1em;
 }
-
-
-.game-screen {
-    height: 13.5em;
+.block-row {
     width: 100%;
-    position: relative;
+    height: 100%;
+}
+.block {
+    background-color: blue;
+    position: fixed;
 }
 
 .ball {
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    border-radius: 50%;
-    position: absolute;
-    left: 0;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@keyframes changeBackgroundColor { /* Secret */
-    0% { background-color: red; }
-    25% { background-color: blue; }
-    50% { background-color: green; }
-    75% { background-color: yellow; }
-    100% { background-color: red; }
-}
-
-body.animation-active {
-    animation: changeBackgroundColor 1s infinite; /* Change color every 10 seconds */
-}
-
-.column.animation-active {
-    animation: changeBackgroundColor 1s infinite;
+    background-color: sandybrown;
+    position: fixed;
+    border-radius: 1em;
 }
